Updated package versions to angular 2.4

--- a/package.json
+++ b/package.json
@@ -14,39 +14,44 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/common": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/router": "^3.4.0",
     "file-system": "^2.2.2",
-    "nativescript-angular": "1.2.0"
+    "nativescript-angular": "^1.4.1"
   },
   "devDependencies": {
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/compiler-cli": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/forms": "^2.4.0",
+    "@angular/http": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
     "@synerty/vortexjs": "^0.2.17",
-    "@types/node": "^6.0.58",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.2.0",
     "tns-core-modules": "2.4.4",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
     "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.3",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "~2.0.10",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~2.0.0",
+    "jasmine-core": "~2.5.2",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "protractor": "~5.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.4.2",
+    "typescript": "~2.0.0"
     "webdriver-manager": "10.2.5",
     "babel-traverse": "6.21.0",
     "babel-types": "6.21.0",
