--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "license": "MIT",
   "angular-cli": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Synerty/peek-web-ns.git"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0",
@@ -28,6 +32,7 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@synerty/vortexjs": "^0.2.17",
+    "@angular/cli": "1.0.0-rc.1",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "nativescript-theme-core": "^0.2.1",
@@ -35,8 +40,7 @@
     "rxjs": "^5.2.0",
     "tns-core-modules": "2.4.4",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23",
-    "angular-cli": "1.0.0-beta.21",
+    "zone.js": "^0.7.2",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
