--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,13 @@
         "declaration": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "noEmitOnError": false,
         "lib": [
             "es6",
             "dom"
         ],
         "mapRoot": "./",
+        "sourceMap": true,
         "module": "commonjs",
         "moduleResolution": "node",
         "target": "es5",
