Split imports into nativescript and web

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,6 +12,12 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
-    ]
-  }
+    ],
+    "types": []
+  },
+  "exclude": [
+    "**/node_modules",
+    "**/*.spec.ts",
+    "**/e2e"
+  ]
 }
